tests/regression/baselines/err_match_duplicate_tags.expected
ERROR
SyntaxError: Duplicate match pattern
  | `A x -> x
  | `B s -> 0
  | `A y -> y + 1
    ^~~~          
Note: Variant already matched here:
match `A 5 with
  | `A x -> x
    ^~~~      
  | `B s -> 0
  | `A y -> y + 1
